kubernetes/platform-apps/ktrlplane/_ktrlplane/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ktrlplane
spec:
  parentRefs:
    - name: ktrlplane
      type: Gateway
      namespace: ktrlplane
  hostnames:
    - ktrlplane.konnektr.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/
      backendRefs:
        - name: ktrlplane-backend-service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ktrlplane-frontend-service
          port: 80
